--- a/angular-hero-tour/angular.json
+++ b/angular-hero-tour/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2d22d9a9-21a1-4038-a5a0-67dcf74a09b8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
